# py4uview

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  DATImage.py  README.md  index.md  requirements.txt  setup.cfg  setup.py
Utilities/: UI_metadata_extractor.py  extract_metadata.py
base/: DATImage.ipynb
doc/: LEEM ImageHeader metadata field.txt
examples/: py4uview.ipynb
leemimage/: __init__.py  _typing.py
leemimage/core/: uvim.py  uvims.py
leemimage/io/parsers/: __init__.py  readers.py
leemimage/util/: __init__.py
py4uview/: __init__.py  reader.py  uview.py
