[metadata]
name =
author = Lin Zhu
author_email = lin.zhu@maxiv.lu.se
license =
description =
long_description_content_type=text/x-rst
long_description =

url = https://github.com/zhulincqu/LEEMimage
classifiers =
    Development Status :: Developing
    License :: LGPL
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Scientific